--- a/index.html
+++ b/index.html
@@ -4383,7 +4383,7 @@ flexibility(document.documentElement);
                                 </span>
                                 <span class="elementor-grid-item">
                                     <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-37416b8"
-                                        href="https://t.me/bluebird_base" target="_blank">
+                                        href="https://t.me/" target="_blank">
                                         <span class="elementor-screen-only">Telegram</span>
                                         <svg class="e-font-icon-svg e-fab-telegram" viewBox="0 0 496 512"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -4561,7 +4561,7 @@ flexibility(document.documentElement);
                                         <div class="elementor-widget-container">
                                             <div class="elementor-button-wrapper">
                                                 <a class="elementor-button elementor-button-link elementor-size-sm"
-                                                    href="https://t.me/bluebird_base">
+                                                    href="https://t.me/">
                                                     <span class="elementor-button-content-wrapper">
                                                         <span class="elementor-button-text">Telegram</span>
                                                     </span>
@@ -5356,7 +5356,7 @@ flexibility(document.documentElement);
                                 <div class="elementor-widget-container">
                                     <div class="elementor-button-wrapper">
                                         <a class="elementor-button elementor-button-link elementor-size-sm"
-                                            href="https://t.me/bluebird_base">
+                                            href="https://t.me/">
                                             <span class="elementor-button-content-wrapper">
                                                 <span class="elementor-button-text">Telegram</span>
                                             </span>
